<resources>
    <string name="app_name">t3a1-Tortosa-Pau</string>
    <string name="tittle">Cupcakes</string>
    <string name="autor">Autor</string>
    <string name="description">Descripción</string>
    <string name="description_text">una receta ideal para iniciarse con los cupcakes, con la que preparar unos ricos cupcakes de vainilla con cobertura de buttercream, cobertura de la que os proponemos tres versiones.</string>
    <string name="ingredients">Ingredientes</string>
    <string name="ingredients_text">- 165 gramos de harina de repostería\n- 165 gramos de mantequilla sin sal\n- 165 gramos de azúcar\n- 15 ml de esencia de vainilla\n- 50 ml de leche\n- 5 gramos de levadura\n- 3 huevos medianos</string>
    <string name="recipe">Receta</string>
    <string name="recipe_text">Una vez que tenemos el horno en marcha, y todos nuestros ingredientes medidos y pesados, vamos a comenzar a preparar la base de nuestros cupcakes. Nosotros empleamos una amasadora automática, pero se puede emplear también unas varillas manuales o un robot de cocina, lo que os resulte más cómodo dentro de lo que dispongáis.</string>
</resources>